--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-md navbar-light" style="background-color: #e3f2fd">
         <div class="container-fluid" id="navBar">
-            <a href="/weather" class="navbar-brand">HebCal Personal Calendar</a>
+            <a href="/cal" class="navbar-brand">HebCal Personal Calendar</a>
         </div>
     </nav>
     <main class="container-md">
