fixed seeding data, some additional work on view pages

--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -15,6 +15,16 @@
     <nav class="navbar navbar-expand-md navbar-light" style="background-color: #e3f2fd">
         <div class="container-fluid" id="navBar">
             <a href="/cal" class="navbar-brand">HebCal Personal Calendar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle Navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <a href="/events/new" class="nav-link text-dark">New</a>
+                <a href="/users/signup" class="nav-link text-dark">New user signup</a>
+                <a href="/users/login" class="nav-link text-dark">Log in</a>
+                <a href="/users/logout" class="nav-link text-dark">Log out</a>
+                <a href="/events/personal" class="nav-link text-dark">My fruits</a>
+            </div>
         </div>
     </nav>
     <main class="container-md">
