--- a/views/index.liquid
+++ b/views/index.liquid
@@ -7,9 +7,9 @@
         <h1>Upcoming events</h1>
     </div>
     <ul class="list-group">
-        {% for data in data.items %}
+        {% for data in data %}
         <li class="list-group-item">{{data.date}}</li>
-        <li class="list-group-item"><a href="/cal/{{data[index0]._id}}">{{data.title}}</a></li>
+        <li class="list-group-item"><a href="/cal/{{data._id}}">{{data.title}}</a></li>
         {% endfor %}
     </ul>
 </div>
