--- a/views/show.liquid
+++ b/views/show.liquid
@@ -2,21 +2,33 @@
 
 {% block content %}
 
-<p></p>
-    <h2 class="display-6">Display all</h2>
-    <div class="row">
-        <div class="card" style="width: 18rem">
-           <p></p>
-           <p></p>
-        </div>
-    </div>
-<!-- 
-<h5 class="card-header">{{data.name}}</h5>
-           <div class="card-body">
-                <h6 class="card-title">Category: {{data.category}}
-                </h6>
-               <p class="card-text">Group: {{data.group}}</p>
-               <p class="card-text">{{data.htmlCode[0]}}</p>
-               <a href="/" class="btn btn-info">View {{fruit.name}}</a> 
+    <h2 class="card-header">{{data.title}}</h2>
+        <div class="card-body">
+            <div class="card" style="width: 18rem">
+                <p class="card-text">Category: {{data.category}}</p>
+                <p class="card-text">Date: {{data.date}}</p>
+                <p class="card-text">Heb Date: {{data.hdate}}</p>
 
+                <p class="card-text">Memo: {{data.memo}}</p>
+                <p class="card-text">Hebrew: {{data.hebrew}}</p>
+                
+                <p class="card-text">Yomtov: 
+                    {% if data.yomtov %} 
+                    Yes 
+                    {% else %} 
+                    No 
+                    {% endif %}
+                </p>
+            </div>
+            <div class="btn-group">
+                <form action="/cal/personal{{event._id}}?_method=DELETE" method="POST">
+                    <a href="/cal" class="btn btn-primary">Back to main page</a> 
+                    <a href="/cal/personal{{event._id}}/edit" class="btn btn-primary">Edit Fruit</a>
+                    <input type="submit" value="DELETE" class="btn btn-danger">
+                </form>
+            </div>
+        </div>
+
+
+              
 {% endblock %}
