Set up new index and show pages to events from personal calendar. set up corresponding routes to those pages. set up personal calendar delete route and function

--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -23,7 +23,8 @@
                 <a href="/users/signup" class="nav-link text-dark">New user signup</a>
                 <a href="/users/login" class="nav-link text-dark">Log in</a>
                 <a href="/users/logout" class="nav-link text-dark">Log out</a>
-                <a href="/events/personal" class="nav-link text-dark">My fruits</a>
+                <a href="/personal/list" class="nav-link text-dark">My Calendars</a>
+                <a href="/personal/new" class="nav-link text-dark">Create New Calendar</a>
             </div>
         </div>
     </nav>
