--- a/views/personal/newCal.liquid
+++ b/views/personal/newCal.liquid
@@ -2,9 +2,9 @@
 {% block content %}
 <div class="container-md">
 
-    <form action="/cal/personal/new" method="POST">
+    <form action="/personal/new" method="POST">
         <fieldset>
-            <legend>Create a personal cal</legend>
+            <legend>Create a Personal Calendar</legend>
             <label class="form-label">Name:</label>
             <input 
                 class="form-control" 
