created event edit and put routs + liquid page. Had to update show route from personal cal to display the actual event from the personal cal and not display from main model

--- a/views/personal/newCal.liquid
+++ b/views/personal/newCal.liquid
@@ -10,14 +10,14 @@
                 class="form-control" 
                 type="text" 
                 name="name" 
-                placeholder="enter name"
+                placeholder="enter name for calendar"
             >
             <label class=form-label>Description:</label>
             <input 
                 class="form-control" 
                 type="text" 
                 name="description" 
-                placeholder="color"
+                placeholder="description"
             >   
         </fieldset>
         <input 
