--- a/views/show.liquid
+++ b/views/show.liquid
@@ -27,6 +27,7 @@
                     <a href="/personal{{event._id}}/edit" class="btn btn-primary">Edit Event</a>
                     <input type="submit" value="DELETE" class="btn btn-danger">                
                     <a href="/personal/add/{{data._id}}" class="btn btn-success">Add to Personal Calendar</a>
+                </form>
             </div>
         </div>
 
