--- a/views/personal/personalIndex.liquid
+++ b/views/personal/personalIndex.liquid
@@ -10,9 +10,12 @@
     <ul class="list-group">
         {% for data in data %}
         <li class="list-group-item">{{data.date}}</li>
-        <li class="list-group-item"><a href="/cal/{{data._id}}">{{data.title}}</a></li>
+        <li class="list-group-item"><a href="/personal/show/{{data._id}}/{{cal._id}}">{{data.title}}</a></li>
         {% endfor %}
     </ul>
+    <a href="/personal/list" class="btn btn-success">Back to calendars list</a>
 </div>
 
 {% endblock %}
+
+<!-- DISPLAY OF EVENTS UNDER PERSONAL CALENDAR -->
