--- a/views/personal/showPersonalCal.liquid
+++ b/views/personal/showPersonalCal.liquid
@@ -1,20 +1,23 @@
 {% layout 'layout.liquid' %}
 
 {% block content %}
-{% for data in data %}
 <div class="card-body">
+    {% for data in data %}
     <div class="card" style="width: 18rem">
         <h2 class="card-header"><a href="/personal/{{data._id}}">{{data.name}}</a></h2>
                 <p class="card-text">Description: {{data.description}}</p>
             </div>
             <div class="btn-group">
                 <form action="/personal/{{data._id}}?_method=DELETE" method="POST">
-                    
                     <a href="/cal" class="btn btn-primary">Back to main page</a>
                     <input type="submit" value="DELETE CALENDAR" class="btn btn-danger">
+                </form>
             </div>
         </div>
-{% endfor %}
+    {% endfor %}
+</div>
 
               
 {% endblock %}
+
+<!-- THIS SHOWS ALL PERSONAL CALENDARS -->
