--- a/views/personal/personalIndex.liquid
+++ b/views/personal/personalIndex.liquid
@@ -14,6 +14,7 @@
         {% endfor %}
     </ul>
     <a href="/personal/list" class="btn btn-success">Back to calendars list</a>
+    <a href="/personal/newEvent/{{calId}}" class="btn btn-success">Create New Event</a>
 </div>
 
 {% endblock %}
