--- a/views/personal/newCal.liquid
+++ b/views/personal/newCal.liquid
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="container-md">
 
-    <form action="/personal/new" method="POST">
+    <form action="/personal/new" method="POST" width="300">
         <fieldset>
             <legend>Create a Personal Calendar</legend>
             <label class="form-label">Name:</label>
@@ -23,9 +23,11 @@
         <input 
             type="submit" 
             value="Create New Calendar" 
-            class="btn btn-success"
+            class="btn"
         >
     </form>
 
 </div>
 {% endblock %}
+
+<!-- new calendar creation form -->
