--- a/views/show.liquid
+++ b/views/show.liquid
@@ -23,10 +23,8 @@
             <div class="btn-group">
                 <form action="/personal{{data}}?_method=DELETE" method="POST">
                     
-                    <a href="/cal" class="btn btn-primary">Back to main page</a> 
-                    <a href="/personal{{event._id}}/edit" class="btn btn-primary">Edit Event</a>
-                    <input type="submit" value="DELETE" class="btn btn-danger">                
-                    <a href="/personal/select/{{data._id}}" class="btn btn-success">Add to Personal Calendar</a>
+                    <a href="/cal" class="btn">Back to main page</a>            
+                    <a href="/personal/select/{{data._id}}" class="btn">Add to Personal Calendar</a>
                 </form>
             </div>
         </div>
