--- a/views/personal/calSelection.liquid
+++ b/views/personal/calSelection.liquid
@@ -4,19 +4,18 @@
 <div class="card-body">
     <h3>Select which calendar you would like to add the event to:</h3>
     {% for data in data %}
+    {% if data.owner == owner %}
     <div class="card" style="width: 18rem">
         <h2 class="card-header"><a href="/personal/add/{{data._id}}/{{eventId}}">{{data.name}}</a></h2>
                 <p class="card-text">Description: {{data.description}}</p>
-                <p>calID {{data._id}}</p>
-                <p>eventID {{eventId}}</p>
             </div>   
         </div>
+    {% endif %}    
     {% endfor %}
     <div class="btn-group">
-        <a href="/cal" class="btn btn-primary">Back to main page</a>
+        <a href="/cal" class="btn">Back to main page</a>
 </div>
-</div>
-            
+</div>        
 {% endblock %}
 
-<!-- THIS SHOWS ALL PERSONAL CALENDARS -->
+<!-- list of all personal calendars available to add an event to-->
