--- a/views/users/login.liquid
+++ b/views/users/login.liquid
@@ -21,7 +21,7 @@
         <input 
             type="submit" 
             value="log in" 
-            class="btn btn-success"
+            class="btn"
         >
     </form>
 </div>
