looking for a bug, checking out to an older commit

--- a/views/personal/showOnPersonal.liquid
+++ b/views/personal/showOnPersonal.liquid
@@ -1,6 +1,7 @@
 {% layout 'layout.liquid' %}
 
 {% block content %}
+<p>eventID {{item._id}}</p>
     <h2 class="card-header">{{item.title}}</h2>
         <div class="card-body">
             <div class="card" style="width: 18rem">
