--- a/views/index.liquid
+++ b/views/index.liquid
@@ -8,7 +8,7 @@
     </div>
     <ul class="list-group">
         {% for data in data %}
-        <li class="list-group-item">{{data.date | %I:%M %m-%d-%y }}</li>
+        <li class="list-group-item">{{data.date | date: "%m-%d-%y"}}</li>
         <li class="list-group-item"><a href="/cal/{{data._id}}">{{data.title}}</a></li>
         {% endfor %}
     </ul>
