--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-light" id="navBar">
+    <nav class="navbar navbar-expand-md navbar-dark" id="navBar">
         <div class="container-fluid">
             <a href="/cal" class="navbar-brand" id="navBarTitle">HebCal Personal Calendar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle Navigation">
